--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,164 @@
-/*body{
-    background-color:white ;
+* {
+    margin: 0;
+    padding: 0;
+
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
 }
-/* .products{
-    display: flex;
-   text-align: center; */
 
-
-
-
-
-/*.products-centr-1{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    flex-basis: 20%;
-    flex-wrap: wrap;
+a{
+    text-decoration: none;
 }
-*/
-/*.products-centr-2{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    flex-basis: 20%;
-    flex-wrap: wrap;
+
+body {
+    background: url(../img/bg.png) no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.wrapper {
+    background-color: white;
+    margin: 50px 10%;
+    max-width: 1024px;
+    padding: 60px 40px;
+}
+
+.button {
+    background-color: #91ac27;
+    border: none;
+    padding: 6px 12px;
+    color: white;
+    transition: all 0.5s;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #629c16; 
+    transition: all 0.5s;
+}
+
+.link{
+    color: black;
+    transition: all 0.5s;
+    margin: 10px 0;
     
-}*/
+}
 
-/*.products-centr-3{
+.link:hover{
+    color: #91ac27;
+    transition: all 0.5s;
+}
+
+nav > a{
+    border-bottom: 2px solid transparent;
+    padding: 15px 5px;
+    transition: all 0.5s;
+}
+
+nav > a:hover {
+    border-bottom: 2px solid #91ac27;    
+    transition: all 0.5s;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+}
+h2{
+    width: 100%
+}
+
+a{
+    text-decoration: none;
+}
+
+body {
+    background: url(../img/bg.png) no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.wrapper {
+    background-color: white;
+    margin: 50px 10%;
+    max-width: 1024px;
+    padding: 60px 40px;
+}
+
+.button {
+    background-color: #91ac27;
+    border: none;
+    padding: 6px 12px;
+    color: white;
+    transition: all 0.5s;
+    cursor: pointer;
+    text-align: center;
+
+}
+
+.button:hover {
+    background-color: #629c16; 
+    transition: all 0.5s;
+
+}
+
+.link{
+    color: black;
+    transition: all 0.5s;
+}
+
+.link:hover{
+    color: #91ac27;
+    transition: all 0.5s;
+}
+nav > . link{
+    margin-left: 15px;
+    margin-right: 15px;  
+
+}
+
+nav > a{
+    border-bottom: 2px solid transparent;
+    padding: 15px 5px;
+    transition: all 0.5s;
+    margin-left: 15px;
+    margin-right: 15px;  
+}
+
+nav > a:hover {
+    border-bottom: 2px solid #91ac27;    
+    transition: all 0.5s;
+}
+
+nav{
+    
     display: flex;
     justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-basis: 20%;
+    width: 100%;
+    margin-top: 40px;
+}
+
+header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     
-}*/
-a{
-    color: red;
+}
+ header section{
+display: flex;
+flex-direction: column; 
+flex-grow: 1;
+}
+header > a{
+    flex-grow: 4;
+}
+.products{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
